--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "screwfast-template",
+  "name": "nathy-graph-template",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -14,6 +14,8 @@
     "@astrojs/mdx": "^4.3.10",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/starlight": "^0.36.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.4",
     "astro-compressor": "^1.2.0",
@@ -26,7 +28,8 @@
     "rimraf": "^6.1.0",
     "sharp": "^0.34.4",
     "sharp-ico": "^0.1.5",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
